@@ -6,7 +6,7 @@ use strict;
 use FindBin qw($Bin);
 
 use lib 't/lib';
-use Test::Most tests => 4;
+use Test::Most tests => 6;
 
 use_ok('Database::test7');
 
@@ -27,3 +27,9 @@ if($ENV{'TEST_VERBOSE'}) {
 	diag(Data::Dumper->new([\@s])->Dump());
 }
 cmp_ok(scalar(@s), '==', 4, 'All sections are found');
+
+@s = $test7->selectall_hash({ entry => 'A7' });
+cmp_ok(scalar(@s), '==', 4, 'All sections are found');
+
+my $rc = $test7->selectall_hashref('A7');
+cmp_ok(scalar(@{$rc}), '==', 4, 'All sections are found, entry is implied argument');
