@@ -3,6 +3,8 @@ Revision history for Database-Abstraction
 0.30
 	slurp mode - remove a data copy
 	selectall_hashref now returns undef if there are no matches
+	rewrote selectall_hashref to not just call selectall_hash, that saves data copying
+	Imply 'entry' argument when possible
 
 0.29	Mon Aug 18 21:42:25 EDT 2025
 	Moved the test data from data to t/data
